--- a/app/src/main/res/layout/student_list_item.xml
+++ b/app/src/main/res/layout/student_list_item.xml
@@ -7,6 +7,9 @@
         <variable
             name="student"
             type="com.ubaya160420092.adv160420092week4.model.Student" />
+        <variable
+            name="listener"
+            type="com.ubaya160420092.adv160420092week4.view.ButtonDetailClickListener" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -69,6 +72,8 @@
                     android:layout_marginEnd="16dp"
                     android:layout_marginBottom="1dp"
                     android:text="Detail"
+                    android:tag="@{student.id}"
+                    android:onClick="@{listener::onButtonDetailClick}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/txtName" />
