--- a/app/src/main/res/layout/student_list_item.xml
+++ b/app/src/main/res/layout/student_list_item.xml
@@ -36,6 +36,8 @@
                     android:layout_width="100dp"
                     android:layout_height="0dp"
                     android:scaleType="centerCrop"
+                    android:imageUrl="@{student.photoUrl}"
+                    android:progressBar="@{progressBar}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
